--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/auth.css">
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 <body>
     <nav class="navbar">
