--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -6,7 +6,6 @@
   color: white;
   padding: 1rem 2rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  /* position: sticky; */
   top: 0;
   z-index: 100;
 }
@@ -17,7 +16,7 @@
 }
 
 .nav-button {
-  background-color: #3b4cca; /* Pokemon blue */
+  background-color: #3b4cca;
   color: white;
   border: none;
   padding: 0.5rem 1rem;
@@ -31,13 +30,6 @@
 
 .nav-button:hover {
   background-color: #2a3a99;
-}
-
-.welcome-message {
-  color: #3b4cca; /* Pokemon blue */
-  margin-right: 1rem;
-  font-weight: bold;
-  align-self: center;
 }
 
 /* Admin Dropdown Styles */
@@ -68,23 +60,20 @@
   right: 0;
 }
 
-.admin-dropdown-content a {
+.admin-dropdown-content span.dropdown-item {
   color: #333;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   transition: background-color 0.3s;
+  cursor: default;
 }
 
-.admin-dropdown-content a:hover {
+.admin-dropdown-content span.dropdown-item:hover {
   background-color: #f1f1f1;
   color: #3b4cca;
 }
 
 .admin-dropdown:hover .admin-dropdown-content {
   display: block;
-}
-
-.admin-dropdown:hover .admin-dropbtn {
-  background-color: #2a3a99;
 }
